Updated a few net worth page items - fixed build error - changed HEX colors to variables - table collapse body only, not footer - fixed all accounts dropdown (white color text) - updated navbar responsiveness - added money minx icon logo - navbar to show correct logo or icon

--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -6,6 +6,11 @@
   -webkit-flex-wrap: wrap;
   -webkit-align-items: center;
   -webkit-justify-content: space-between;
+  flex-wrap: wrap;
+
+  @media (min-width: $md) {
+    flex-wrap: nowrap;
+  }
 }
 .navbar > .container,
 .navbar > .container-fluid {
@@ -18,6 +23,7 @@
 .mm-navbar {
   @extend .navbar;
   padding: 20px 0 20px 20px;
+  flex-wrap: nowrap;
 
   @media (min-width: $md) {
     padding: 30px 50px 36px 50px;
